--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/cli": "^4.1.13"
   },
   "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.17"
   }
 }
