--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.13"
+    "@tailwindcss/cli": "^4.1.13",
+    "tailwindcss-clip-path": "^1.0.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.1.7"
   }
 }
